@@ -467,7 +467,7 @@ public class ReplyingKafkaTemplateTests {
 	@Test
 	public void testAggregateNormal() throws Exception {
 		AggregatingReplyingKafkaTemplate<Integer, String, String> template = aggregatingTemplate(
-				new TopicPartitionOffset(D_REPLY, 0), 2, new AtomicInteger());
+				new TopicPartitionOffset(D_REPLY, 0), 3, new AtomicInteger());
 		try {
 			template.setCorrelationHeaderName("customCorrelation");
 			template.setDefaultReplyTimeout(Duration.ofSeconds(30));
@@ -477,13 +477,17 @@ public class ReplyingKafkaTemplateTests {
 			future.getSendFuture().get(10, TimeUnit.SECONDS); // send ok
 			ConsumerRecord<Integer, Collection<ConsumerRecord<Integer, String>>> consumerRecord =
 					future.get(30, TimeUnit.SECONDS);
-			assertThat(consumerRecord.value().size()).isEqualTo(2);
+			assertThat(consumerRecord.value().size()).isEqualTo(3);
 			Iterator<ConsumerRecord<Integer, String>> iterator = consumerRecord.value().iterator();
 			String value1 = iterator.next().value();
-			assertThat(value1).isIn("fOO", "FOO");
+			assertThat(value1).isIn("fOO", "FOO", "Foo");
 			String value2 = iterator.next().value();
-			assertThat(value2).isIn("fOO", "FOO");
+			assertThat(value2).isIn("fOO", "FOO", "Foo");
 			assertThat(value2).isNotSameAs(value1);
+			String value3 = iterator.next().value();
+			assertThat(value3).isIn("fOO", "FOO", "Foo");
+			assertThat(value3).isNotSameAs(value1);
+			assertThat(value3).isNotSameAs(value2);
 			assertThat(consumerRecord.topic()).isEqualTo(AggregatingReplyingKafkaTemplate.AGGREGATED_RESULTS_TOPIC);
 		}
 		finally {
@@ -495,7 +499,7 @@ public class ReplyingKafkaTemplateTests {
 	@Test
 	public void testAggregateNormalStringCorrelation() throws Exception {
 		AggregatingReplyingKafkaTemplate<Integer, String, String> template = aggregatingTemplate(
-				new TopicPartitionOffset(D_REPLY, 0), 2, new AtomicInteger());
+				new TopicPartitionOffset(D_REPLY, 0), 3, new AtomicInteger());
 		try {
 			template.setCorrelationHeaderName("customCorrelation");
 			template.setBinaryCorrelation(false);
@@ -506,13 +510,17 @@ public class ReplyingKafkaTemplateTests {
 			future.getSendFuture().get(10, TimeUnit.SECONDS); // send ok
 			ConsumerRecord<Integer, Collection<ConsumerRecord<Integer, String>>> consumerRecord =
 					future.get(30, TimeUnit.SECONDS);
-			assertThat(consumerRecord.value().size()).isEqualTo(2);
+			assertThat(consumerRecord.value().size()).isEqualTo(3);
 			Iterator<ConsumerRecord<Integer, String>> iterator = consumerRecord.value().iterator();
 			String value1 = iterator.next().value();
-			assertThat(value1).isIn("fOO", "FOO");
+			assertThat(value1).isIn("fOO", "FOO", "Foo");
 			String value2 = iterator.next().value();
-			assertThat(value2).isIn("fOO", "FOO");
+			assertThat(value2).isIn("fOO", "FOO", "Foo");
 			assertThat(value2).isNotSameAs(value1);
+			String value3 = iterator.next().value();
+			assertThat(value3).isIn("fOO", "FOO", "Foo");
+			assertThat(value3).isNotSameAs(value1);
+			assertThat(value3).isNotSameAs(value2);
 			assertThat(consumerRecord.topic()).isEqualTo(AggregatingReplyingKafkaTemplate.AGGREGATED_RESULTS_TOPIC);
 		}
 		finally {
@@ -526,7 +534,7 @@ public class ReplyingKafkaTemplateTests {
 	@Disabled("time sensitive")
 	public void testAggregateTimeout() throws Exception {
 		AggregatingReplyingKafkaTemplate<Integer, String, String> template = aggregatingTemplate(
-				new TopicPartitionOffset(E_REPLY, 0), 3, new AtomicInteger());
+				new TopicPartitionOffset(E_REPLY, 0), 4, new AtomicInteger());
 		try {
 			template.setDefaultReplyTimeout(Duration.ofSeconds(5));
 			template.setCorrelationHeaderName("customCorrelation");
@@ -561,7 +569,7 @@ public class ReplyingKafkaTemplateTests {
 	public void testAggregateTimeoutPartial() throws Exception {
 		AtomicInteger releaseCount = new AtomicInteger();
 		AggregatingReplyingKafkaTemplate<Integer, String, String> template = aggregatingTemplate(
-				new TopicPartitionOffset(F_REPLY, 0), 3, releaseCount);
+				new TopicPartitionOffset(F_REPLY, 0), 4, releaseCount);
 		template.setReturnPartialOnTimeout(true);
 		try {
 			template.setDefaultReplyTimeout(Duration.ofSeconds(5));
@@ -572,16 +580,20 @@ public class ReplyingKafkaTemplateTests {
 			future.getSendFuture().get(10, TimeUnit.SECONDS); // send ok
 			ConsumerRecord<Integer, Collection<ConsumerRecord<Integer, String>>> consumerRecord =
 					future.get(30, TimeUnit.SECONDS);
-			assertThat(consumerRecord.value().size()).isEqualTo(2);
+			assertThat(consumerRecord.value().size()).isEqualTo(3);
 			Iterator<ConsumerRecord<Integer, String>> iterator = consumerRecord.value().iterator();
 			String value1 = iterator.next().value();
-			assertThat(value1).isIn("fOO", "FOO");
+			assertThat(value1).isIn("fOO", "FOO", "Foo");
 			String value2 = iterator.next().value();
-			assertThat(value2).isIn("fOO", "FOO");
+			assertThat(value2).isIn("fOO", "FOO", "Foo");
 			assertThat(value2).isNotSameAs(value1);
+			String value3 = iterator.next().value();
+			assertThat(value3).isIn("fOO", "FOO", "Foo");
+			assertThat(value3).isNotSameAs(value1);
+			assertThat(value3).isNotSameAs(value2);
 			assertThat(consumerRecord.topic())
 					.isEqualTo(AggregatingReplyingKafkaTemplate.PARTIAL_RESULTS_AFTER_TIMEOUT_TOPIC);
-			assertThat(releaseCount.get()).isEqualTo(3);
+			assertThat(releaseCount.get()).isEqualTo(4);
 		}
 		finally {
 			template.stop();
@@ -593,7 +605,7 @@ public class ReplyingKafkaTemplateTests {
 	public void testAggregateTimeoutPartialStringCorrelation() throws Exception {
 		AtomicInteger releaseCount = new AtomicInteger();
 		AggregatingReplyingKafkaTemplate<Integer, String, String> template = aggregatingTemplate(
-				new TopicPartitionOffset(F_REPLY, 0), 3, releaseCount);
+				new TopicPartitionOffset(F_REPLY, 0), 4, releaseCount);
 		template.setReturnPartialOnTimeout(true);
 		template.setBinaryCorrelation(false);
 		try {
@@ -605,16 +617,20 @@ public class ReplyingKafkaTemplateTests {
 			future.getSendFuture().get(10, TimeUnit.SECONDS); // send ok
 			ConsumerRecord<Integer, Collection<ConsumerRecord<Integer, String>>> consumerRecord =
 					future.get(30, TimeUnit.SECONDS);
-			assertThat(consumerRecord.value().size()).isEqualTo(2);
+			assertThat(consumerRecord.value().size()).isEqualTo(3);
 			Iterator<ConsumerRecord<Integer, String>> iterator = consumerRecord.value().iterator();
 			String value1 = iterator.next().value();
-			assertThat(value1).isIn("fOO", "FOO");
+			assertThat(value1).isIn("fOO", "FOO", "Foo");
 			String value2 = iterator.next().value();
-			assertThat(value2).isIn("fOO", "FOO");
+			assertThat(value2).isIn("fOO", "FOO", "Foo");
 			assertThat(value2).isNotSameAs(value1);
+			String value3 = iterator.next().value();
+			assertThat(value3).isIn("fOO", "FOO", "Foo");
+			assertThat(value3).isNotSameAs(value1);
+			assertThat(value3).isNotSameAs(value2);
 			assertThat(consumerRecord.topic())
 					.isEqualTo(AggregatingReplyingKafkaTemplate.PARTIAL_RESULTS_AFTER_TIMEOUT_TOPIC);
-			assertThat(releaseCount.get()).isEqualTo(3);
+			assertThat(releaseCount.get()).isEqualTo(4);
 		}
 		finally {
 			template.stop();
@@ -866,6 +882,17 @@ public class ReplyingKafkaTemplateTests {
 		}
 
 		@Bean
+		public ConcurrentKafkaListenerContainerFactory<Integer, String> customListenerContainerFactory() {
+			ConcurrentKafkaListenerContainerFactory<Integer, String> factory =
+					new ConcurrentKafkaListenerContainerFactory<>();
+			factory.setConsumerFactory(cf());
+			factory.setReplyTemplate(template());
+			factory.setCorrelationHeaderName("customCorrelation");
+			factory.setMissingTopicsFatal(false);
+			return factory;
+		}
+
+		@Bean
 		public ConcurrentKafkaListenerContainerFactory<Integer, String> simpleMapperFactory() {
 			ConcurrentKafkaListenerContainerFactory<Integer, String> factory =
 					new ConcurrentKafkaListenerContainerFactory<>();
@@ -921,7 +948,8 @@ public class ReplyingKafkaTemplateTests {
 			return new HandlerReturn();
 		}
 
-		@KafkaListener(id = "def1", topics = { D_REQUEST, E_REQUEST, F_REQUEST })
+		@KafkaListener(id = "def1", topics = { D_REQUEST, E_REQUEST, F_REQUEST },
+				containerFactory = "customListenerContainerFactory")
 		@SendTo  // default REPLY_TOPIC header
 		public Message<String> dListener1(String in, @Header("customCorrelation") byte[] correlation) {
 			return MessageBuilder.withPayload(in.toUpperCase())
@@ -929,12 +957,19 @@ public class ReplyingKafkaTemplateTests {
 					.build();
 		}
 
-		@KafkaListener(id = "def2", topics = { D_REQUEST, E_REQUEST, F_REQUEST })
+		@KafkaListener(id = "def2", topics = { D_REQUEST, E_REQUEST, F_REQUEST },
+				containerFactory = "customListenerContainerFactory")
 		@SendTo  // default REPLY_TOPIC header
-		public Message<String> dListener2(String in, @Header("customCorrelation") byte[] correlation) {
+		public Message<String> dListener2(String in) {
 			return MessageBuilder.withPayload(in.substring(0, 1) + in.substring(1).toUpperCase())
-					.setHeader("customCorrelation", correlation)
 					.build();
+		}
+
+		@KafkaListener(id = "def3", topics = { D_REQUEST, E_REQUEST, F_REQUEST },
+				containerFactory = "customListenerContainerFactory")
+		@SendTo  // default REPLY_TOPIC header
+		public String dListener3(String in) {
+			return in.substring(0, 1).toUpperCase() + in.substring(1);
 		}
 
 		@KafkaListener(id = G_REQUEST, topics = G_REQUEST)
